fixed SecurityAuth
