# internal/app/schemas/requests.go
@@ -103,3 +103,7 @@ type LoginUserRequest struct {
 	Login    string `json:"login"`
 	Password string `json:"password"`
 }
+
+type LogoutUserRequest struct {
+	Login string `json:"login"`
+}
